Fix word overflow in header

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ header nav ul li a {
     margin: 0;
     padding-bottom: 0.25em;
     width: 80%;
+    overflow-wrap: break-word;
 }
 .tagline h2 {
     color: #fff;
